name and title modified

--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,17 @@
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="/js/main.js" type="module"></script>
-
   </head>
-
   <body>
-     <!-- ✅ Registration Banner -->
-  <div class="registration-banner">
-    <span class="close-btn">&times;</span>
-    <p>
-      Have you already Registered? 
-      <button class="register-btn">Register Now</button>
-      <span class="giveaway-msg">Enter our giveaway!</span>
-    </p>
-  </div>
+    <!-- ✅ Registration Banner -->
+    <div class="registration-banner">
+      <span class="close-btn">&times;</span>
+      <p>
+        Have you already Registered?
+        <button class="register-btn">Register Now</button>
+        <span class="giveaway-msg">Enter our giveaway!</span>
+      </p>
+    </div>
     <header id="header" class="divider"></header>
     <main class="divider">
       <div class="hero">
@@ -48,23 +46,30 @@
           </li>
           <li>
             <a href="/product_listing/index.html?category=sleeping-bags">
-              <img src="/images/categories/category-sleepingbags.svg" alt="Sleeping Bags" />
+              <img
+                src="/images/categories/category-sleepingbags.svg"
+                alt="Sleeping Bags"
+              />
             </a>
           </li>
           <li>
             <a href="/product_listing/index.html?category=backpacks">
-              <img src="/images/categories/category-backpacks.svg" alt="Backpacks" />
+              <img
+                src="/images/categories/category-backpacks.svg"
+                alt="Backpacks"
+              />
             </a>
           </li>
           <li>
             <a href="/product_listing/index.html?category=hammocks">
-              <img src="/images/categories/category-hammocks.svg" alt="Camping Gear" />
+              <img
+                src="/images/categories/category-hammocks.svg"
+                alt="Camping Gear"
+              />
             </a>
           </li>
         </ul>
       </div>
-
-
     </main>
     <footer id="footer"></footer>
   </body>
