--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -7,23 +7,20 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="/js/cart.js" type="module"></script>
   </head>
-
   <body>
     <header id="header" class="divider"></header>
     <main class="divider">
       <section class="products">
         <h2>My Cart</h2>
-        <ul class="product-list">
-        </ul>
-        <div class="cart-total" style="display: none;"></div>
+        <ul class="product-list"></ul>
+        <div class="cart-total" style="display: none"></div>
       </section>
-      <div style="text-align: center; margin-top: 20px;">
-      <a href="/checkout/index.html">
-        <button type="button">Proceed to Checkout</button>
-      </a>
-    </div>
+      <div style="text-align: center; margin-top: 20px">
+        <a href="/checkout/index.html">
+          <button type="button">Proceed to Checkout</button>
+        </a>
+      </div>
     </main>
-
     <footer id="footer"></footer>
   </body>
 </html>
